--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,7 +7,7 @@
        * SITE_NAME：站点名称
        */
       window.GLOBAL_CONFIG = {
-        SCF_GATEWAY: "https://x.sayemraj7943.workers.dev/",
+        SCF_GATEWAY: "https://sayem.mohammadjafariqbalchowdh-u-ry.workers.dev/",
         SITE_NAME: "sayem king",
            IS_CF: true,
       };
